--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -38,7 +38,7 @@
     <view class="line_flag"></view>
   </view>
   <block wx:for='{{brands}}' wx:key='id'>
-    <navigator url='/pages/detail/detail'>
+    <navigator url='/pages/brand/brand?activityId={{item.id}}'>
       <image class="head-img" src='{{item.imgUrl}}' mode='widthFix' />
     </navigator>
     <text class='brand-name'>{{item.name}}</text>
